--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -110,6 +110,11 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation 'com.facebook.fresco:fresco:3.2.0'
+    implementation 'com.facebook.fresco:animated-gif:3.2.0'
+    implementation 'com.facebook.fresco:webpsupport:3.2.0'
+    implementation 'com.facebook.fresco:animated-webp:3.2.0'
+    implementation 'com.facebook.fresco:webpsupport:3.2.0'
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
