--- a/ios/EyeQ/Info.plist
+++ b/ios/EyeQ/Info.plist
@@ -28,14 +28,13 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -50,5 +49,13 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Sloan.otf</string>
+		<string>NotoSansDevanagari.ttf</string>
+		<string>NotoSansTamil.ttf</string>
+		<string>NotoSansTelugu.ttf</string>
+		<string>Tinos-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
